bug(polishing): fixed the response code for update
